<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <EditText
            android:id="@+id/etUno"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/numero_uno" />

    <EditText
        android:id="@+id/etDos"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/numero_dos" />





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sumar"
            android:id="@+id/btnSumar"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_restar"
            android:id="@+id/btnRestar"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_dividir"
            android:id="@+id/btnDividir"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_multiplicar"
            android:id="@+id/btnMulti"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10pt" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_resultado" />

        <EditText
            android:id="@+id/etResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_lim_cam"
            android:id="@+id/btnLimpiar"/>
    </LinearLayout>




</LinearLayout>